; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/platform/x86/extr_topstar-laptop.c_acpi_topstar_remove.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/platform/x86/extr_topstar-laptop.c_acpi_topstar_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_device = type { i32 }
%struct.topstar_hkey = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.acpi_device*, i32)* @acpi_topstar_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @acpi_topstar_remove(%struct.acpi_device* %0, i32 %1) #0 {
  %3 = alloca %struct.acpi_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.topstar_hkey*, align 8
  store %struct.acpi_device* %0, %struct.acpi_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.acpi_device*, %struct.acpi_device** %3, align 8
  %7 = call %struct.topstar_hkey* @acpi_driver_data(%struct.acpi_device* %6)
  store %struct.topstar_hkey* %7, %struct.topstar_hkey** %5, align 8
  %8 = load %struct.acpi_device*, %struct.acpi_device** %3, align 8
  %9 = call i32 @acpi_topstar_fncx_switch(%struct.acpi_device* %8, i32 0)
  %10 = load %struct.topstar_hkey*, %struct.topstar_hkey** %5, align 8
  %11 = getelementptr inbounds %struct.topstar_hkey, %struct.topstar_hkey* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @input_unregister_device(i32 %12)
  %14 = load %struct.topstar_hkey*, %struct.topstar_hkey** %5, align 8
  %15 = call i32 @kfree(%struct.topstar_hkey* %14)
  ret i32 0
}

declare dso_local %struct.topstar_hkey* @acpi_driver_data(%struct.acpi_device*) #1

declare dso_local i32 @acpi_topstar_fncx_switch(%struct.acpi_device*, i32) #1

declare dso_local i32 @input_unregister_device(i32) #1

declare dso_local i32 @kfree(%struct.topstar_hkey*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
